owlc-lexer/src/snapshots/owlc_lexer__lexer__tests__identifier-2.snap
---
source: owlc-lexer/src/lexer.rs
expression: "lex_str(\"_my_variable\")"
---
[
    Token {
        kind: Identifier(
            "_my_variable",
        ),
        loc: Span {
            lo: BytePos(
                0,
            ),
            hi: BytePos(
                12,
            ),
        },
    },
]
