owlc-lexer/src/snapshots/owlc_lexer__lexer__tests__identifier.snap
---
source: owlc-lexer/src/lexer.rs
expression: "lex_str(\"my_variable\")"
---
[
    Token {
        kind: Identifier(
            "my_variable",
        ),
        span: Span {
            lo: BytePos(
                0,
            ),
            hi: BytePos(
                11,
            ),
        },
    },
]
