owlc-lexer/src/snapshots/owlc_lexer__lexer__tests__int_literal-2.snap
---
source: owlc-lexer/src/lexer.rs
expression: "lex_str(\"1120323489\")"
---
[
    Token {
        kind: LiteralInt(
            1120323489,
        ),
        loc: Span {
            lo: BytePos(
                0,
            ),
            hi: BytePos(
                10,
            ),
        },
    },
]
