owlc-lexer/src/snapshots/owlc_lexer__lexer__tests__int_literal.snap
---
source: owlc-lexer/src/lexer.rs
expression: "lex_str(\"1\")"
---
[
    Token {
        kind: LiteralInt(
            1,
        ),
        span: Span {
            lo: BytePos(
                0,
            ),
            hi: BytePos(
                1,
            ),
        },
    },
]
