owlc-lexer/src/snapshots/owlc_lexer__lexer__tests__keywords.snap
---
source: owlc-lexer/src/lexer.rs
expression: "lex_str(\"fn extern let if else while for in return\")"
---
[
    Token {
        kind: KeywordFn,
        span: Span {
            lo: BytePos(
                0,
            ),
            hi: BytePos(
                2,
            ),
        },
    },
    Token {
        kind: KeywordExtern,
        span: Span {
            lo: BytePos(
                3,
            ),
            hi: BytePos(
                9,
            ),
        },
    },
    Token {
        kind: KeywordLet,
        span: Span {
            lo: BytePos(
                10,
            ),
            hi: BytePos(
                13,
            ),
        },
    },
    Token {
        kind: KeywordIf,
        span: Span {
            lo: BytePos(
                14,
            ),
            hi: BytePos(
                16,
            ),
        },
    },
    Token {
        kind: KeywordElse,
        span: Span {
            lo: BytePos(
                17,
            ),
            hi: BytePos(
                21,
            ),
        },
    },
    Token {
        kind: KeywordWhile,
        span: Span {
            lo: BytePos(
                22,
            ),
            hi: BytePos(
                27,
            ),
        },
    },
    Token {
        kind: KeywordFor,
        span: Span {
            lo: BytePos(
                28,
            ),
            hi: BytePos(
                31,
            ),
        },
    },
    Token {
        kind: KeywordIn,
        span: Span {
            lo: BytePos(
                32,
            ),
            hi: BytePos(
                34,
            ),
        },
    },
    Token {
        kind: KeywordReturn,
        span: Span {
            lo: BytePos(
                35,
            ),
            hi: BytePos(
                41,
            ),
        },
    },
]
