owlc-lexer/src/snapshots/owlc_lexer__lexer__tests__punctuation-2.snap
---
source: owlc-lexer/src/lexer.rs
expression: "lex_str(\"== <= >= < >\")"
---
[
    Token {
        kind: OpEqualsEquals,
        loc: Span {
            lo: BytePos(
                0,
            ),
            hi: BytePos(
                2,
            ),
        },
    },
    Token {
        kind: OpEqualsLessThan,
        loc: Span {
            lo: BytePos(
                3,
            ),
            hi: BytePos(
                5,
            ),
        },
    },
    Token {
        kind: OpEqualsGreaterThan,
        loc: Span {
            lo: BytePos(
                6,
            ),
            hi: BytePos(
                8,
            ),
        },
    },
    Token {
        kind: OpLessThan,
        loc: Span {
            lo: BytePos(
                9,
            ),
            hi: BytePos(
                10,
            ),
        },
    },
    Token {
        kind: OpGreaterThan,
        loc: Span {
            lo: BytePos(
                11,
            ),
            hi: BytePos(
                12,
            ),
        },
    },
]
